# gtester

./: CMakeLists.txt  GTester.pro
src/: application.cpp  application.h  globalprogress.cpp  setfocus.h
